@@ -58,6 +58,9 @@ Added the L<debugf()|Badger::Debug/debugf()> and
 L<debug_at()|Badger::Debug/debug_at()> methods to 
 L<Badger::Debug>.
 
+Added the L<auto_can()|Badger::Class::Methods/auto_can()> method to 
+L<Badger::Class::Methods>.
+
 =head2 Version 0.06
 
 Added L<copy_file()|Badger::Filesystem/copy_file()> and
